glFusion ChangeLog

v1.5.0
------
- Bumped PHP requirement to v5.3 as a minimum
- New 'default' theme - based on Nouveau but uses jQuery as JS engine
- Revamped how scripts are loaded...
- Implemented new jQuery widgets
- Fixed error in youtube autotag where it would log parse errors
- Migrate all Mootools functionality into the Nouveau theme
- Reworked how embedded story images are handled
- Cleaned up allowed html / allowed auto tag display on story and
  comment entry
- Comment edit now takes you directly to the comment entry area
- HTML filter now allows you to specific both element and attributes
- Privacy policy and Terms of use now implemented as static pages
- Support for PHP v5.3+ unlimited post size

v1.4.1
------
- Several stability improvements
- Several code improvements for running a site under SSL
- Improved URL filtering
- Fixed issue where sub menus with URLs did not use the defined URL
- Added Github oauth authentication
- Stories under what's new block now display the time interval
- Older Stories block did not display the proper date
- Fixed error where Comment header did not always display in what's new block
- Notification emails did not send properly for newly uploaded files
- CKEditor's filemanager plugin now supports per-user directories
  for images.
- Fixed row styling on admin lists
- Ratings did not register when 'clicked'
- CKEditor FileManager could not locate images/library/ directory
- StaticPages: Last update date was incorrect
- Added WYSIWYG editor support for blocks
- Fixed error when submitting a new article when auto close comments
  was enabled.
- CKEditor now support direct integration with Smiley plugin
- Installation / upgrade enhancements to better support PHP v5.5+
- Update OAuth library to latest release

v1.4.0
------
- Improved HTML filtering and variable sanitizing capabilities.
- Fixed security flaw in HTML filter.
- Removed FCKEditor from code base